completed what is required

--- a/index.html
+++ b/index.html
@@ -1,8 +1,35 @@
 <!DOCTYPE html>
 <html>
-   <head>
-   </head>
-   <body>
-      <!-- Write your HTML in this file! -->
-   </body>
+
+<head>
+   <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+   <!-- Write your HTML in this file! -->
+   <nav>
+      <a href="#">a</a>
+      <a href="#">b</a>
+      <a href="#">c</a>
+   </nav>
+
+   <header>
+      <h1>
+         PLEASE RUN 'node app.js' IN THE TERMINAL. THEN IN THE BROWSWER, GO TO localhost:8888
+      </h1>
+   </header>
+
+   <main>
+      <article>
+         <p>Main</p>
+         <img src="" alt="">
+      </article>
+   </main>
+
+   <footer>
+      &copy; Tri Vu 2024
+   </footer>
+
+</body>
+
 </html>
