--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
    <header>
       <h1>
-         PLEASE RUN 'node app.js' IN THE TERMINAL. THEN IN THE BROWSWER, GO TO localhost:8888
+         PLEASE RUN 'npm i' THEN 'node app.js' IN THE TERMINAL. THEN IN THE BROWSWER, GO TO localhost:8888
       </h1>
    </header>
 
